ya agregue los datos por columnas en el footer, culminando con esto la creacion de la primera pagina, ahora comenzare agregarle los estilos para acomodar la pagina segun las instrucciones

--- a/index.html
+++ b/index.html
@@ -36,14 +36,43 @@
 	                Correo electrónico: <a href="mailto:joan33he@yahoo.com">joan33he@yahoo.com</a>
 	            </label>
 	            <label>
- 
+	                Quetzaltenango, Guatemala.
+	            </label>
+	            <label>
+	                Telefono: <a href="+50254257793">5424-7793</a>
 	            </label>
 	        </div>
 	        <div>
-	            
+	            <label>
+	                Terminos y Condiciones
+	            </label>
+	            <label>
+	                Todas las imagenes estan sujetas a derechos de autor.
+	            </label>
 	        </div>
-	        <div></div>
-	        <div></div>
+	        <div>
+	            <label>
+	                Redes Sociales
+	            </label>
+	            <label>
+	                <nav>
+	                    <a href="">FaceBook</a>
+	                    <a href="">YouTube</a>
+	                    <a href="">Instagram</a>
+	                </nav>
+	            </label>
+	        </div>
+	        <div>
+	            <label>
+	                Derechos Reservados
+	            </label>
+	            <label>
+	                Antonio Gonzalez
+	            </label>
+	            <label>
+	                ©2019
+	            </label>
+	        </div>
 	    </footer>
 	</body>
 </html>
