hasta aqui centre toda la pagina con margenes automaticos de derecha y de izquierda, tambien les coloque el color de fondo segun lo indicado y vididi las imagenes secundarios en dos columnas, ahora comenzare a trabajar con el encabezado y el pie de la pagina

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8"> 
 		<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0">
 		<title>Galeria de Fotos</title>
-		<link rel="stylesheet" href="">
+		<link rel="stylesheet" href="css/estilos1.css">
 	</head>
 	<body>
 	    <header>
@@ -19,13 +19,15 @@
 	    </header>
 	    <div id="contenido">
 	        <div id="principal">
-	            <img src="images/imagen1.jpg" alt="imagen1">
+                <div class="imagen">
+	                <img src="images/imagen1.jpg" alt="imagen1">
+	            </div>
 	        </div>
 	        <div id="secundario">
-	            <div>
+	            <div class="imagen1">
 	                <img src="images/paisaje1.jpg" alt="paisaje1">
 	            </div>
-	            <div>
+	            <div class="imagen2">
 	                <img src="images/retrato1.jpg" alt="retrato1">
 	            </div>   
 	        </div>
