--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 		<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0">
 		<title>Galeria de Fotos</title>
 		<link rel="stylesheet" href="css/estilos1.css">
+		<link rel="stylesheet" href="css/cabeza:pie.css">
+		<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 	</head>
 	<body>
 	    <header>
 	        <h1>Comenzando con la fotografía</h1>
-	        <article>
-	            <nav>
-	                <a href="">Inicio</a>
-	                <a href="">Paisajes</a>
-	                <a href="">Retratos</a>
+	            <nav id="menu">
+	                <a href="" id="inicio">Inicio</a>
+	                <a href="" id="paisajes">Paisajes</a>
+	                <a href="" id="retratos">Retratos</a>
 	            </nav>
-	        </article>
 	    </header>
 	    <div id="contenido">
 	        <div id="principal">
@@ -33,47 +33,47 @@
 	        </div>
 	    </div>
 	    <footer>
-	        <div>
-	            <label>
-	                Correo electrónico: <a href="mailto:joan33he@yahoo.com">joan33he@yahoo.com</a>
-	            </label>
-	            <label>
+	        <div id="columna1">
+	            <p>
+	                <h1>Contactos</h1>
+                    Correo electrónico:
+                    <a href="mailto:joan33he@yahoo.com">joan33he@yahoo.com</a>
+	            </p>
+	            <p>
 	                Quetzaltenango, Guatemala.
-	            </label>
-	            <label>
+	            </p>
+	            <p>
 	                Telefono: <a href="+50254257793">5424-7793</a>
-	            </label>
+	            </p>
 	        </div>
-	        <div>
-	            <label>
-	                Terminos y Condiciones
-	            </label>
+	        <div id="columna2">
+                <h1>Terminos</h1>
 	            <label>
 	                Todas las imagenes estan sujetas a derechos de autor.
 	            </label>
 	        </div>
-	        <div>
-	            <label>
+	        <div id="columna3">
+	            <h1>
 	                Redes Sociales
-	            </label>
-	            <label>
+	            </h1>
+	            <label><p>Siguenos y comparte con nosotros</p>
 	                <nav>
-	                    <a href="">FaceBook</a>
-	                    <a href="">YouTube</a>
-	                    <a href="">Instagram</a>
+	                    <a href="https://www.youtube.com/" target="_blank">Suscríbete  <img src="images/youtube.png" alt="youtube"></a>
+	                    <a href="https://www.facebook.com/" target="_blank">Suscríbete  <img src="images/facebook.png" alt="facebook"></a>
+	                    <a href="https://www.instagram.com/" target="_blank">Suscríbete  <img src="images/instagram.jpg" alt="instagram"></a>
 	                </nav>
 	            </label>
 	        </div>
-	        <div>
-	            <label>
-	                Derechos Reservados
-	            </label>
-	            <label>
+	        <div id="columna4">
+	            <h1>
+	                Derechos
+	            </h1>
+	            <p>
 	                Antonio Gonzalez
-	            </label>
-	            <label>
-	                ©2019
-	            </label>
+	            </p>
+	            <p>
+	                ©CopyRight 2019
+	            </p>
 	        </div>
 	    </footer>
 	</body>
