--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0">
 		<title>Galeria de Fotos</title>
 		<link rel="stylesheet" href="css/estilos1.css">
-		<link rel="stylesheet" href="css/cabeza:pie.css">
+		<link rel="stylesheet" href="css/cabezaPie.css">
 		<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 	</head>
 	<body>
