agrego la referencia del menu para inicio que me enlaza a index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	    <header>
 	        <h1>Comenzando con la fotografía</h1>
 	            <nav id="menu">
-	                <a href="" id="inicio">Inicio</a>
+	                <a href="index.html" id="inicio">Inicio</a>
 	                <a href="" id="paisajes">Paisajes</a>
 	                <a href="" id="retratos">Retratos</a>
 	            </nav>
