--- a/html/paisajes.html
+++ b/html/paisajes.html
@@ -5,17 +5,26 @@
 		<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0">
 		<title></title>
 		<link rel="stylesheet" href="../css/cabezaPie.css">
+		<link rel="stylesheet" href="../css/estilos2.css">
 		<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 	</head>
 	<body>
 	    <header>
+            <h1>Comenzando con la fotografía</h1>
 	        <nav id="menu">
 	            <a href="index.html" id="inicio">Inicio</a>
 	            <a href="" id="paisajes">Paisajes</a>
 	            <a href="" id="retratos">Retratos</a>
 	        </nav>
 	    </header>
-	    
+	    <div>
+	        <div id="imagen1"><img src="../images/paisaje1.jpg" alt="paisaje1"></div>
+	        <div id="imagen2"><img src="../images/paisaje2.jpg" alt="paisaje2"></div>
+	        <div id="imagen3"><img src="../images/paisaje3.jpg" alt="paisaje3"></div>
+	        <div id="imagen4"><img src="../images//paisaje4.jpg" alt="paisaje4"></div>
+	        <div id="imagen5"><img src="../images/paisaje5.jpg" alt="paisaje5"></div>
+	        <div id="imagen6"><img src="../images/imagen1.jpg" alt=""></div>
+	    </div>
 	    <footer>
 	        <div id="columna1">
 	            <p>
