--- a/html/paisajes.html
+++ b/html/paisajes.html
@@ -17,13 +17,29 @@
 	            <a href="" id="retratos">Retratos</a>
 	        </nav>
 	    </header>
-	    <div>
-	        <div id="imagen1"><img src="../images/paisaje1.jpg" alt="paisaje1"></div>
-	        <div id="imagen2"><img src="../images/paisaje2.jpg" alt="paisaje2"></div>
-	        <div id="imagen3"><img src="../images/paisaje3.jpg" alt="paisaje3"></div>
-	        <div id="imagen4"><img src="../images//paisaje4.jpg" alt="paisaje4"></div>
-	        <div id="imagen5"><img src="../images/paisaje5.jpg" alt="paisaje5"></div>
-	        <div id="imagen6"><img src="../images/imagen1.jpg" alt=""></div>
+	    <div id="contenido">
+            <div class="fila1">
+                <div id="imagen1">
+                    <img src="../images/imagen1.jpg" alt="imagen1">
+                </div>
+	            <div id="imagen2">
+	                <img src="../images/paisaje1.jpg" alt="paisaje1">
+	            </div>
+	            <div id="imagen3">
+	                <img src="../images/paisaje2.jpg" alt="paisaje2">
+	            </div>
+            </div>
+            <div class="fila2">
+               <div id="imagen4">
+                   <img src="../images//paisaje3.jpg" alt="paisaje3">
+               </div>
+	            <div id="imagen5">
+	                <img src="../images/paisaje4.jpg" alt="paisaje4">
+	            </div>
+	            <div id="imagen6">
+	                <img src="../images/paisaje5.jpg" alt="paisaje5">
+	            </div> 
+            </div>
 	    </div>
 	    <footer>
 	        <div id="columna1">
