--- a/index.html
+++ b/index.html
@@ -7,15 +7,23 @@
 		<link rel="stylesheet" href="css/estilos1.css">
 		<link rel="stylesheet" href="css/cabezaPie.css">
 		<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+		<style>
+            #inicio:hover{
+                color: aqua;
+            }
+            #inicio{
+                text-decoration: none;
+            }
+        </style>
 	</head>
 	<body>
 	    <header>
 	        <h1>Comenzando con la fotografía</h1>
-	            <nav id="menu">
-	                <a href="index.html" id="inicio">Inicio</a>
-	                <a href="" id="paisajes">Paisajes</a>
-	                <a href="" id="retratos">Retratos</a>
-	            </nav>
+	        <nav id="menu">
+	            <a href="index.html" id="inicio">Inicio</a>
+	            <a href="html/paisajes.html" id="paisajes">Paisajes</a>
+	            <a href="html/retratos.html" id="retratos">Retratos</a>
+	        </nav>
 	    </header>
 	    <div id="contenido">
 	        <div id="principal">
@@ -25,10 +33,12 @@
 	        </div>
 	        <div id="secundario">
 	            <div class="imagen1">
-	                <img src="images/paisaje1.jpg" alt="paisaje1">
+	                <a href="html/paisajes.html"><img src="images/paisaje1.jpg" alt="paisaje1"></a>
+	                <p>Paisajes</p>
 	            </div>
 	            <div class="imagen2">
-	                <img src="images/retrato1.jpg" alt="retrato1">
+	                <a href="html/retratos.html"><img src="images/retrato1.jpg" alt="retrato1"></a>
+	                <p>Retratos</p>
 	            </div>   
 	        </div>
 	    </div>
@@ -43,7 +53,7 @@
 	                Quetzaltenango, Guatemala.
 	            </p>
 	            <p>
-	                Telefono: <a href="+50254257793">5424-7793</a>
+	                Telefono: <a href="tel:+50254257793">5424-7793</a>
 	            </p>
 	        </div>
 	        <div id="columna2">
