--- a/html/paisajes.html
+++ b/html/paisajes.html
@@ -7,18 +7,26 @@
 		<link rel="stylesheet" href="../css/cabezaPie.css">
 		<link rel="stylesheet" href="../css/estilos2.css">
 		<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+		<style>
+            #paisajes:hover{
+                color: aqua;
+            }
+            #paisajes{
+                text-decoration: none;
+            }
+        </style>
 	</head>
 	<body>
 	    <header>
             <h1>Comenzando con la fotografía</h1>
 	        <nav id="menu">
-	            <a href="index.html" id="inicio">Inicio</a>
-	            <a href="" id="paisajes">Paisajes</a>
-	            <a href="" id="retratos">Retratos</a>
+	            <a href="../index.html" id="inicio">Inicio</a>
+	            <a href="paisajes.html" id="paisajes">Paisajes</a>
+	            <a href="retratos.html" id="retratos">Retratos</a>
 	        </nav>
 	    </header>
 	    <div id="contenido">
-            <div class="fila1">
+           <div class="fila1">
                 <div id="imagen1">
                     <img src="../images/imagen1.jpg" alt="imagen1">
                 </div>
@@ -31,7 +39,7 @@
             </div>
             <div class="fila2">
                <div id="imagen4">
-                   <img src="../images//paisaje3.jpg" alt="paisaje3">
+                   <img src="../images/paisaje3.jpg" alt="paisaje3">
                </div>
 	            <div id="imagen5">
 	                <img src="../images/paisaje4.jpg" alt="paisaje4">
@@ -52,7 +60,7 @@
 	                Quetzaltenango, Guatemala.
 	            </p>
 	            <p>
-	                Telefono: <a href="+50254257793">5424-7793</a>
+	                Telefono: <a href="tel:+50254257793">5424-7793</a>
 	            </p>
 	        </div>
 	        <div id="columna2">
