corregi un error de ubicacion de etiqueta h1 que lo habia dejado dentro de una etiqueta p

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 	    <header>
-	        <h1>Comenzando con la fotografía</h1>
+	        <h1>Comenzando con la Fotografía</h1>
 	        <nav id="menu">
 	            <a href="index.html" id="inicio">Inicio</a>
 	            <a href="html/paisajes.html" id="paisajes">Paisajes</a>
@@ -44,8 +44,8 @@
 	    </div>
 	    <footer>
 	        <div id="columna1">
-	            <p>
-	                <h1>Contactos</h1>
+	            <h1>Contactos</h1>
+                <p>
                     Correo electrónico:
                     <a href="mailto:joan33he@yahoo.com">joan33he@yahoo.com</a>
 	            </p>
