--- a/html/paisajes.html
+++ b/html/paisajes.html
@@ -3,7 +3,7 @@
     <head>
 		<meta charset="utf-8"> 
 		<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0">
-		<title></title>
+		<title>Galeria Paisajes</title>
 		<link rel="stylesheet" href="../css/cabezaPie.css">
 		<link rel="stylesheet" href="../css/estilos2.css">
 		<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 	    <header>
-            <h1>Comenzando con la fotografía</h1>
+            <h1>Comenzando con los Paisajes</h1>
 	        <nav id="menu">
 	            <a href="../index.html" id="inicio">Inicio</a>
 	            <a href="paisajes.html" id="paisajes">Paisajes</a>
