--- a/html/retratos.html
+++ b/html/retratos.html
@@ -3,7 +3,7 @@
     <head>
 		<meta charset="utf-8"> 
 		<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0">
-		<title></title>
+		<title>Galeria Retratos</title>
 		<link rel="stylesheet" href="../css/cabezaPie.css">
 		<link rel="stylesheet" href="../css/estilos2.css">
 		<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 	    <header>
-            <h1>Comenzando con la fotografía</h1>
+            <h1>Comenzando con los Retratos</h1>
 	        <nav id="menu">
 	            <a href="../index.html" id="inicio">Inicio</a>
 	            <a href="paisajes.html" id="paisajes">Paisajes</a>
@@ -51,8 +51,8 @@
 	    </div>
 	    <footer>
 	        <div id="columna1">
-	            <p>
-	                <h1>Contactos</h1>
+	            <h1>Contactos</h1>
+                <p>
                     Correo electrónico:
                     <a href="mailto:joan33he@yahoo.com">joan33he@yahoo.com</a>
 	            </p>
